hub, discover and export map works

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "service": {
       "provide": [
         "api-landscape"
+      ],
+      "consume": [
+        "api-landscape"
       ]
     }
   },
@@ -19,6 +22,7 @@
   },
   "dependencies": {
     "api-landscape": "^0.0.1",
+    "async": "^2.6.1",
     "change-case": "^3.0.2",
     "dotenv": "^6.1.0",
     "edit-dotenv": "^1.0.4",
@@ -33,6 +37,7 @@
     "portastic": "^1.0.1",
     "read-pkg": "^4.0.1",
     "redoc": "^2.0.0-alpha.40",
+    "request": "^2.88.0",
     "rimraf": "^2.6.2",
     "swagger-cli": "^2.1.3",
     "which": "^1.3.1"
