--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "change-case": "^3.0.2",
     "dotenv": "^6.1.0",
     "edit-dotenv": "^1.0.4",
+    "express": "^4.16.4",
     "express-http-proxy": "^1.5.0",
     "freeport": "^1.0.5",
     "grunt": "^1.0.3",
