--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "start": "api-landscape hub"
   },
   "dependencies": {
-    "api-landscape": "^0.0.1",
+    "api-landscape": "netmilk/api-landscape",
     "async": "^2.6.1",
     "change-case": "^3.0.2",
     "dotenv": "^6.1.0",
